--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <div class="box-1"></div>
     <div class="box-2"></div>
     <div class="box-3"></div>
+    <img src="https://placebear.com/cache/145-201.jpg" alt="">
 </body>
 </html>
